Messages deleted in public folders cannot be moved to Deleted Items
Hi :)
I am currently using Evolution 3.32.4 (Flathub) on Linux Mint 19.2 XFCE.
Evolution is set up in an Exchange 2010 environment using exchange-ews.
When trying to delete a message (or really any item) in an public folder, Evolution apparently tries to move the item to the deleted folder of the inbox. This fails with the error message "Ein Element in einem Öffentlichen Ordner kann nicht in den Ordner "Gelöschte Elemente" verschoben werden." (Public folder elements cannot be moved to the folder "Deleted Items") in a red box. The message can be dismissed, but continously pops up again until you manually delete the cache in ~/.var/app/org.gnome.Evolution/cache/evolution/mail/cd1c85b4aa760278b2cdaa9d797fc92f5cf31fd8.
The error is present as well in the 3.28.5 (latest version available in Linux Mint 19.2 for direct install).
with best regards
Ingo Quade