I#60 - Messages deleted in public folders cannot be moved to Deleted Items

Closes https://gitlab.gnome.org/GNOME/evolution-ews/issues/60